@@ -1,5 +1,6 @@
 Changelog for Alias (v1.1.0-SNAPSHOT)
 
+2012-07-28 23:17:18 +0100    add MetricsListener (James Richardson)
 2012-07-07 05:20:58 +0100    fix NPE when initalising handler before plugin is ready (James Richardson)
 2012-07-07 04:38:58 +0100    remove duplicates from header (James Richardson)
 2012-07-07 04:33:58 +0100    preserve order (James Richardson)
